--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/** @format */
+
 .App {
   text-align: center;
 }
@@ -26,6 +28,15 @@
 
 .App-link {
   color: #61dafb;
+}
+.success-page {
+  color: white;
+}
+.success-page p {
+  cursor: pointer;
+}
+.error-page {
+  color: red;
 }
 
 @keyframes App-logo-spin {
