--- a/src/Form/Form.css
+++ b/src/Form/Form.css
@@ -9,6 +9,13 @@
 body {
   background-color: var(--bg-color-one);
 }
+
+.form-container {
+  width: 600px;
+  margin: auto;
+  margin-top: 10%;
+}
+
 .form-label {
   display: block;
   /* text-align: center; */
@@ -24,7 +31,7 @@ body {
   border: none;
   border-radius: 4px;
   color: var(--text-color);
-  font-size: 18px;
+  font-size: 20px;
   padding: 3px 10px;
   width: 100%;
   height: 40px;
@@ -35,12 +42,6 @@ body {
 .form-input:focus {
   background-color: var(--bg-color-two);
   outline: none;
-}
-
-.form-container {
-  width: 600px;
-  margin: auto;
-  margin-top: 10%;
 }
 
 .form-submit-button {
@@ -64,8 +65,17 @@ body {
 .disabled:hover {
   background-color: #6d6775;
 }
-.success-message {
-  text-align: center;
+
+.success-page {
+  margin-left: 7%;
+  margin-top: 3%;
+  color: white;
+}
+.success-page p {
+  cursor: pointer;
+}
+.error-page {
+  color: red;
 }
 
 /* removing default html decoration from Age input  */
